--- a/install/1.1.1/README
+++ b/install/1.1.1/README
@@ -2,6 +2,6 @@ LINUX Users: Must run
 $sudo apt-get install mono-complete
 
 WINDOWS Users: Must install
-1. .NET Framework 4.0 Setup .exe
-2. GTK# framework Setup .exe
-3. Bibliomake Setup .exe
+1. .NET Framework 4.0 Setup .exe (Included in ZIP File)
+2. GTK# framework Setup .exe (Included in ZIP File)
+3. Bibliomake Setup .exe (Included in ZIP File)
